fixed dark mode for icons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -759,12 +759,12 @@ img {
 /* contact form */
 
 .contact-page h2 {
-    margin-left: 50px;
-    margin-top: -30px;
+    margin-left: 10px;
+    margin-top: -10px;
 }
 
 .contact-page p {
-    margin-left: 50px; 
+    margin-left: 10px; 
 }
 
 .contact-form {
@@ -898,7 +898,24 @@ img {
     }
 }
 
+@media only screen and (min-width: 1500px) {
+    .header {
+        padding: 0 20rem;
+    }
+}
+
 @media only screen and (min-width: 975px) {
+
+    .header-buttons {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 1.5rem;
+        position: fixed;
+        top: 20px;
+        right: 40px;
+        z-index: 1000;
+    }
 
     .main {
         padding: 10px;
@@ -1087,9 +1104,17 @@ body.dark-mode .dark-mode-toggle .sun {
     display: none;
 }
 
+body.dark-mode .footer {
+    color: #6c707a;
+}
+
 /* dark mode for svg icons */
 body.dark-mode .dark-mode-icon {
-    filter: brightness(0) invert(1);
+    filter: brightness(0) invert(0.9);
+}
+
+body.dark-mode .linkedin-icon {
+    filter: brightness(0.9) invert(1);
 }
 
 .dark-mode-icon {
